added meta tags

--- a/index.html
+++ b/index.html
@@ -2,9 +2,22 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8" />
+    <meta name="description" content="Hiring a web developer to build your online business? Here you can find the work of Kiran Iyer, a software developer who specializes in web design and web development.">
+    <meta name="keywords" content="Web design, web development, online business, web designer in bangalore, web developer in bangalore, software developer, freelancer, freelance, freelance website">
+    <meta name="theme-color" content="#fc9db3">
+    <meta property="og:site_name" content="imeandmyself"><!-- change this-->
+    <meta property="og:title" content="imeandmyself"><!-- change this-->
+    <meta property="og:url" content="https://imeandmyself.netlify.app/"><!-- change this-->
+    <meta property="og:type" content="website">
+    <meta property="og:image" content=""> <!-- change this-->
+    <meta property="og:image:width" content="1500">
+    <meta property="og:image:height" content="1500">
+    <meta itemprop="name" content="Kieran Web Design"> <!-- change this-->
+    <meta itemprop="url" content="https://imeandmyself.netlify.app/"> <!-- change this-->
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Kieran</title>
     <link rel="stylesheet" href="style.css" />
+    <link rel="canonical" href="/home">
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.2/css/all.min.css"
