--- a/index.html
+++ b/index.html
@@ -114,13 +114,7 @@
         <div class="column col-left reveal">
           <h2 class="content-title">My Skills</h2>
           <p>
-            Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do
-            eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim
-            ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
-            aliquip ex ea commodo consequat. Duis aute irure dolor in
-            reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla
-            pariatur. Excepteur sint occaecat cupidatat non proident, sunt in
-            culpa qui officia deserunt mollit anim id est laborum.
+            With over 2 years of experience in full-stack software engineering and web & app development, I am confident I will be a great asset to you and your company. My previous work experience has set me apart with unique leadership skills and a wide variety of technical languages necessary to bring great value to the dev team, and company as a whole.
           </p>
         </div>
         <div class="column col-right reveal">
