updated logo, fa icons, skills section

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     </div>
 <!-- NAV BAR -->
     <header>
-      <a href="#" class="brand">KV</a>
+      <a href="#main" class="brand"><img id="logo" src="images/Logo.svg" alt="logo"> </a>
       <div class="menu-btn"></div>
       <div class="navigation">
         <a href="#main">Home</a>
@@ -112,10 +112,11 @@
       </div>
       <div class="content">
         <div class="column col-left reveal">
-          <h2 class="content-title">My Skills</h2>
-          <p>
+          <!-- <h2 class="content-title">My Skills</h2> -->
+          <!-- <p>
             With over 2 years of experience in full-stack software engineering and web & app development, I am confident I will be a great asset to you and your company. My previous work experience has set me apart with unique leadership skills and a wide variety of technical languages necessary to bring great value to the dev team, and company as a whole.
-          </p>
+          </p> -->
+          <img src="/images/Review-profile.svg" alt="">
         </div>
         <div class="column col-right reveal">
           <div class="bar">
@@ -213,7 +214,7 @@
         </div>
         <div class="card reveal">
           <div class="service-icon">
-            <i class="fas fa-object-group"></i>
+            <i class="fas fa-mobile"></i>
           </div>
           <div class="info">
             <h3>OPTIMIZED FOR ALL DEVICES</h3>
@@ -223,7 +224,7 @@
         </div>
         <div class="card reveal">
           <div class="service-icon">
-            <i class="fas fa-object-group"></i>
+            <i class="fas fa-users"></i>
           </div>
           <div class="info">
             <h3>BETTER REFERRALS</h3>
@@ -233,7 +234,7 @@
         </div>
         <div class="card reveal">
           <div class="service-icon">
-            <i class="fas fa-object-group"></i>
+            <i class="fas fa-hourglass-start"></i>
           </div>
           <div class="info">
             <h3>READY TO GET STARTED?</h3>
