--- a/index.html
+++ b/index.html
@@ -179,6 +179,7 @@
         <p></p>
       </div>
       <div class="content">
+        <div class="service-row">
         <div class="card reveal">
           <div class="service-icon">
             <i class="fas fa-palette"></i>
@@ -190,6 +191,8 @@
             </p>
           </div>
         </div>
+      </div>
+      <div class="service-row">
         <div class="card reveal">
           <div class="service-icon">
             <i class="fas fa-file-code"></i>
@@ -241,6 +244,7 @@
             <p>
               I'm excited to help! Let's turn your big ideas into reality and create something your clients will love.          </div>
         </div>
+      </div>
       </div>
     </section>
 
