changed domain url and added favicon

--- a/index.html
+++ b/index.html
@@ -5,23 +5,28 @@
     <meta name="description" content="Hiring a web developer to build your online business? Here you can find the work of Kiran Iyer, a software developer who specializes in web design and web development.">
     <meta name="keywords" content="Web design, web development, online business, web designer in bangalore, web developer in bangalore, software developer, freelancer, freelance, freelance website">
     <meta name="theme-color" content="#fc9db3">
-    <meta property="og:site_name" content="https://kiraniyerdev.netlify.app/"><!-- change this-->
-    <meta property="og:title" content="https://kiraniyerdev.netlify.app/"><!-- change this-->
-    <meta property="og:url" content="https://kiraniyerdev.netlify.app/"><!-- change this-->
+    <meta property="og:site_name" content="https://kiraniyerdev.me"><!-- change this-->
+    <meta property="og:title" content="https://kiraniyerdev.me"><!-- change this-->
+    <meta property="og:url" content="https://kiraniyerdev.me"><!-- change this-->
     <meta property="og:type" content="website">
     <meta property="og:image" content=""> <!-- change this-->
     <meta property="og:image:width" content="1500">
     <meta property="og:image:height" content="1500">
-    <meta itemprop="name" content="Kieran Web Design"> <!-- change this-->
-    <meta itemprop="url" content="https://kiraniyerdev.netlify.app/"> <!-- change this-->
+    <meta itemprop="name" content="Kiran Web Design"> <!-- change this-->
+    <meta itemprop="url" content="https://kiraniyerdev.me"> <!-- change this-->
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Kieran</title>
+    <title>Kiran</title>
     <link rel="stylesheet" href="style.css" />
     <link rel="canonical" href="/home">
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.2/css/all.min.css"
     />
+    <!-- Favicon -->
+    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+    <link rel="manifest" href="/site.webmanifest">
   </head>
   <body>
     <div class="scrollToTop-btn">
@@ -53,13 +58,13 @@
         <a href="#work" class="btn">See My Work</a>
         <div class="media-icons">
           <a href="#"><i class="fab fa-facebook-f"></i></a>
-          <a href="https://www.instagram.com/kieran_memphis/"
+          <a href="https://www.instagram.com/kiraniyer_dev/"
             ><i class="fab fa-instagram"></i
           ></a>
           <a href="https://twitter.com/_amyourdaddy"
             ><i class="fab fa-twitter"></i
           ></a>
-          <a href="https://www.linkedin.com/in/kiran-iyer-a2bb6b1b5/"
+          <a href="https://www.linkedin.com/in/kiraniyer/"
             ><i class="fab fa-linkedin"></i
           ></a>
         </div>
@@ -116,7 +121,7 @@
           <!-- <p>
             With over 2 years of experience in full-stack software engineering and web & app development, I am confident I will be a great asset to you and your company. My previous work experience has set me apart with unique leadership skills and a wide variety of technical languages necessary to bring great value to the dev team, and company as a whole.
           </p> -->
-          <img src="/images/Review-profile.svg" alt="">
+          <img src="/images/Review-profile.svg" alt="Review-profile">
         </div>
         <div class="column col-right reveal">
           <div class="bar">
@@ -222,7 +227,7 @@
           <div class="info">
             <h3>OPTIMIZED FOR ALL DEVICES</h3>
             <p>
-              There's no such thing as a one-size-fits-all solution when it comes to web development. That's why everything I build is meticulously crafted to look gorgeous on any device running any browser.            </p>
+              There's no such thing as a one-size-fits-all solution when it comes to web development. That's why everything I build is meticulously crafted to look gorgeous on any device running any browser.</p>
           </div>
         </div>
         <div class="card reveal">
