updated projects section

--- a/index.html
+++ b/index.html
@@ -299,8 +299,8 @@
         </div>
         <div class="card reveal">
           <div class="card-img">
-            <a href="https://kierans-todo-app.netlify.app/"
-              ><img src="images/todo.png" alt="simple to do app"
+            <a href="https://check-yo-emotion.herokuapp.com"
+              ><img src="images/emotion-check.png" alt="emotion check app"
             /></a>
           </div>
         </div>
@@ -404,6 +404,7 @@
    <footer class="footer">
       <p>Copyright @2021 <a href="#">Kiran Iyer</a>. All Rights Reserved.</p>
     </footer>
+
 
     <script src="script.js" charset="utf-8"></script>
   </body>
