updated navbar with blog link

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <meta itemprop="name" content="Kiran Web Design"> <!-- change this-->
     <meta itemprop="url" content="https://kiraniyerdev.me"> <!-- change this-->
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Kiran</title>
+    <title>Kiran - Software Engineer</title>
     <link rel="stylesheet" href="style.css" />
     <link rel="canonical" href="/home">
     <link
@@ -42,6 +42,7 @@
         <a href="#skills">Skills</a>
         <a href="#services">Services</a>
         <a href="#work">Work</a>
+        <a href="https://blog.kiraniyerdev.me/">Blog</a>
         <a href="#contact">Contact</a>
       </div>
     </header>
@@ -61,7 +62,7 @@
           <a href="https://www.instagram.com/kiraniyer_dev/"
             ><i class="fab fa-instagram"></i
           ></a>
-          <a href="https://twitter.com/_amyourdaddy"
+          <a href="https://twitter.com/sir_divs_alot"
             ><i class="fab fa-twitter"></i
           ></a>
           <a href="https://www.linkedin.com/in/kiraniyer/"
